render styles bug

--- a/404.html
+++ b/404.html
@@ -7,12 +7,15 @@
   <title>First Node App</title>
 </head>
 <body>
-  <h1>404 Error</h1>
-  <nav>
-    <a href="/"><h3>Home</h3></a>
-    <a href="/about"><h3>About</h3></a>
-    <a href="/contact-me"><h3>Contact Me</h3></a>
-  </nav>
+  <header>
+    <h1>First Node App</h1>
+    <nav>
+      <a href="/"><h3>Home</h3></a>
+      <a href="/about"><h3>About</h3></a>
+      <a href="/contact-me"><h3>Contact Me</h3></a>
+    </nav>
+  </header>
+  <h2>404 Error</h2>
   <section>
     <p>Oops... Something goes wrong!</p>
   </section>
