--- a/about.html
+++ b/about.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
   <title>First Node App</title>
 </head>
 <body>
-  <h1>About</h1>
-  <nav>
-    <a href="/"><h3>Home</h3></a>
-    <a href="/contact-me"><h3>Contact Me</h3></a>
-  </nav>
+  <header>
+    <h1>First Node App</h1>
+    <nav>
+      <a href="/"><h3>Home</h3></a>
+      <a href="/contact-me"><h3>Contact Me</h3></a>
+    </nav>
+  </header>
+  <h2>About</h2>
   <section>
     <p>This is the first node.js exercise in The Odin Project.</p>
   </section>
