--- a/contact-me.html
+++ b/contact-me.html
@@ -7,11 +7,14 @@
   <title>First Node App</title>
 </head>
 <body>
-  <h1>Contact Me</h1>
-  <nav>
-    <a href="/"><h3>Home</h3></a>
-    <a href="/about"><h3>About</h3></a>
-  </nav>
+  <header>
+    <h1>First Node App</h1>
+    <nav>
+      <a href="/"><h3>Home</h3></a>
+      <a href="/about"><h3>About</h3></a>
+    </nav>
+  </header>
+  <h2>Contact Me</h2>
   <section>
     <p>
       <a href="https://github.com/joan-kii" target='_blank'>Here</a> you can see how my learning in web development is going.
