--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <title>First Node App</title>
 </head>
 <body>
-  <h1>Fist Node App</h1>
-  <nav>
-    <a href="/about"><h3>About</h3></a>
-    <a href="/contact-me"><h3>Contact Me</h3></a>
-  </nav>
+  <header>
+    <h1>Fist Node App</h1>
+    <nav>
+      <a href="/about"><h3>About</h3></a>
+      <a href="/contact-me"><h3>Contact Me</h3></a>
+    </nav>
+  </header>
   <section>
-    <p>Welcome to my first node.js app.</p>
+    <h2>Welcome to my first node.js app.</h2>
     <p>Nothing very interesting around here.</p>
   </section>
 </body>
