--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
   <title>First Node App</title>
+  <style>
+    body {margin: 0}
+    h1 {flex: 2; text-align: left; color: #026e00}
+    h2, p {margin: 2em auto; text-align: center; color: #666}
+    header, nav {display: flex; padding: 0 2em; background-color: #eaf5e9;}
+    nav {flex: 1}
+    a {text-decoration: none; color: #026e00; flex: 1}
+    a, p {font-size: 1.5rem;}
+  </style>
 </head>
 <body>
   <header>
-    <h1>Fist Node App</h1>
+    <h1>First Node App</h1>
     <nav>
       <a href="/about"><h3>About</h3></a>
       <a href="/contact-me"><h3>Contact Me</h3></a>
